--- a/HppDonatApp.Services/HppDonatApp.Services.csproj
+++ b/HppDonatApp.Services/HppDonatApp.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
     <PackageReference Include="CsvHelper" Version="31.0.3" />
     <PackageReference Include="Serilog" Version="4.1.0" />
