--- a/HppDonatApp/HppDonatApp.csproj
+++ b/HppDonatApp/HppDonatApp.csproj
@@ -10,19 +10,12 @@
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
     <!-- WinUI 3 -->
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240923001" />
-    <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.0.0.34" />
-    
-    <!-- MVVM and UI -->
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="WinUIEx" Version="1.10.0" />
-    
-    <!-- Charts -->
-    <PackageReference Include="LiveChartsCore.SkiaSharpView.WinUI" Version="2.0.0-rc3" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="2.0.0-preview1" />
     
     <!-- Data and Services -->
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
@@ -33,13 +26,6 @@
     <!-- Logging -->
     <PackageReference Include="Serilog" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
-    
-    <!-- CSV -->
-    <PackageReference Include="CsvHelper" Version="31.0.3" />
-    
-    <!-- Validation -->
-    <PackageReference Include="FluentValidation" Version="11.9.0" />
-    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
