--- a/HppDonatApp/HppDonatApp.csproj
+++ b/HppDonatApp/HppDonatApp.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <!-- WinUI 3 -->
+    <PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="2.0.0-preview1" />
     
     <!-- Data and Services -->
