--- a/HppDonatApp/HppDonatApp.csproj
+++ b/HppDonatApp/HppDonatApp.csproj
@@ -11,11 +11,21 @@
     <Nullable>enable</Nullable>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <PlatformTarget>x64</PlatformTarget>
+    <NoWarn>$(NoWarn);CS0612</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <!-- WinUI 3 -->
+    <PackageReference Include="CommunityToolkit.WinUI.Animations" Version="8.3.260211-preview1" />
+    <PackageReference Include="CommunityToolkit.WinUI.Behaviors" Version="8.3.260211-preview1" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.Primitives" Version="8.3.260211-preview1" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.3.260211-preview1" />
+    <PackageReference Include="CommunityToolkit.WinUI.Extensions" Version="8.3.260211-preview1" />
+    <PackageReference Include="CommunityToolkit.WinUI.Helpers" Version="8.3.260211-preview1" />
+    <PackageReference Include="CommunityToolkit.WinUI.Media" Version="8.3.260211-preview1" />
     <PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
+    <PackageReference Include="FluentIcons.WinUI" Version="2.0.319" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3848-prerelease" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="2.0.0-preview1" />
     
     <!-- Data and Services -->
@@ -23,10 +33,14 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="3.0.1" />
     
     <!-- Logging -->
     <PackageReference Include="Serilog" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="System.Security.Permissions" Version="11.0.0-preview.1.26104.118" ExcludeAssets="compile;runtime;native;contentFiles;analyzers;build;buildTransitive;buildMultitargeting" />
+    <PackageReference Include="WinUI.TableView" Version="1.4.0" />
+    <PackageReference Include="WinUIEx" Version="2.9.0" />
   </ItemGroup>
 
   <ItemGroup>
